--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==3.0.3
-Flask-Cors==4.0.0
-Flask-PyMongo==2.3.0
-pymongo==4.7.2
-gunicorn==23.0.0
+Flask
+Flask-Cors
+Werkzeug
+pymongo
+dnspython
+python-dotenv
+gunicorn
